Added a new project

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
               </li>
 
               <li>
-                Worked end-to-end across analytics workflows: understanding the
-                problem, validating data sources, cleaning and analysing
-                datasets, and presenting insights in dashboards and reports.
+                Delivered applied analytics work in project-based environments, 
+                reviewing analytical outputs and refining methodologies in line 
+                with real-world reporting expectations.
               </li>
 
               <li>
@@ -183,6 +183,7 @@
               <li>
                 Statistical Modelling (Regression, Classification, Clustering)
               </li>
+              <li>Power BI (data modelling, DAX basics)</li>
               <li>AWS (S3, Lambda, IAM basics, cost analysis)</li>
               <li>Jupyter / Notebooks</li>
               <li>Git / GitHub</li>
@@ -206,7 +207,7 @@
 
         <details open>
           <summary>
-            Coder Academy, Australia — Data Analyst (Applied Analytics Projects)
+            Coder Academy (NextEd Group) — Academic Teacher (Data Science and Web Dev)
             <span class="subtle">(May 2024 – Present)</span>
           </summary>
           <div class="exp-body">
@@ -216,48 +217,20 @@
             </div>
             <h3>Responsibilities</h3>
             <ul class="list">
-              <li>
-                Collected, cleaned, and validated structured and unstructured
-                datasets using Python (Pandas) and SQL, producing reliable
-                datasets for applied analysis and insight generation.
-              </li>
+  <li>Delivered hands-on teaching focused on <strong>data science, applied analytics, and data-driven problem solving</strong> using real-world datasets.</li>
 
-              <li>
-                Performed exploratory data analysis and statistical techniques
-                to identify trends, patterns, and anomalies across real-world
-                datasets.
-              </li>
+  <li>Taught core data workflows including data cleaning, exploratory data analysis, statistical reasoning, and basic machine learning concepts using Python.</li>
 
-              <li>
-                Applied predictive and analytical methods (e.g. regression,
-                clustering) to demonstrate data-driven use cases and support
-                analytical conclusions.
-              </li>
+  <li>Designed and prepared datasets, analytical exercises, and example solutions to demonstrate end-to-end analysis, from raw data to insights.</li>
 
-              <li>
-                Developed dashboards and analytical reports using Power BI,
-                Tableau, and Python visualisations to communicate insights in a
-                clear, stakeholder-friendly format.
-              </li>
+  <li>Guided students through analytics-focused projects, supporting iteration, debugging, and improvement of analytical outputs.</li>
 
-              <li>
-                Supported cloud-based data access and delivery by working with
-                AWS services (S3, Lambda, IAM) within analytics and deployment
-                workflows.
-              </li>
+  <li>Introduced supporting technologies such as basic web applications and cloud deployment to contextualise how analytical work is delivered and consumed.</li>
 
-              <li>
-                Translated technical findings into clear, actionable
-                recommendations for non-technical stakeholders, supporting
-                informed decision-making.
-              </li>
+  <li>Regularly communicated analytical findings and project outcomes to non-technical audiences, strengthening data storytelling and interpretation skills.</li>
+</ul>
 
-              <li>
-                Documented assumptions, methodologies, and outputs to ensure
-                data integrity, transparency, and repeatability across analytics
-                projects.
-              </li>
-            </ul>
+
 
             <h3>Key Contributions</h3>
             <ul class="list">
@@ -293,7 +266,7 @@
 
         <details>
           <summary>
-            Choice Academic College, Sydney — Trainer & Assessor
+            Choice Academic College — Trainer & Assessor
             <span class="subtle">(Sep 2022 – Present)</span>
           </summary>
           <div class="exp-body">
@@ -303,29 +276,14 @@
             </div>
             <h3>Responsibilities</h3>
             <ul class="list">
-              <li>
-                Delivered training in Diploma-level Information Technology
-                subjects, covering Excel, SQL, Python, HTML/CSS, and core
-                programming and data concepts.
-              </li>
+  <li>Taught Diploma of Information Technology courses, delivering structured content across data, systems, and foundational IT concepts.</li>
+  <li>Analysed institutional datasets (enrolments, attendance, assessments, payments, staffing) to support operational and planning decisions.</li>
+  <li>Built 4–5 Power BI dashboards from raw data for recurring term-based and monthly reporting used by admin teams and leadership.</li>
+  <li>Identified at-risk students by analysing performance and payment patterns, enabling early intervention and improved outcomes.</li>
+  <li>Worked with stakeholders to define reporting requirements and metrics for enrolment planning, resourcing, and performance tracking.</li>
+  <li>Identified and resolved data quality issues across multiple sources, improving reliability of published reports.</li>
+</ul>
 
-              <li>
-                Taught students how to work with data using spreadsheets,
-                databases, and basic scripts, focusing on correct usage,
-                structure, and interpretation.
-              </li>
-
-              <li>
-                Guided learners through practical exercises involving data
-                manipulation, querying, and simple analysis using real or
-                realistic datasets.
-              </li>
-
-              <li>
-                Explained technical and data-related concepts in a clear,
-                structured way to learners with varied technical backgrounds.
-              </li>
-            </ul>
 
             <h3>Key Contributions</h3>
             <ul class="list">
@@ -352,7 +310,7 @@
 
         <details>
           <summary>
-            HealthShare NSW, Sydney — Support Officer
+            HealthShare NSW — Support Officer
             <span class="subtle">(May 2023 – Jun 2024)</span>
           </summary>
           <div class="exp-body">
@@ -407,7 +365,7 @@
 
         <details>
           <summary>
-            Snooze, Sydney — Sales Consultant
+            Snooze — Sales Consultant
             <span class="subtle">(Sep 2022 – Jan 2025)</span>
           </summary>
           <div class="exp-body">
@@ -453,7 +411,7 @@
 
         <details>
           <summary>
-            Inctic Labs, Nepal — Junior Data Scientist
+            Inctic Labs Pvt Ltd — Junior Data Scientist
             <span class="subtle">(Oct 2021 – May 2022)</span>
           </summary>
           <div class="exp-body">
@@ -522,7 +480,7 @@
 
         <details>
           <summary>
-            CloudyFox Technologies, Nepal — Data Science Intern
+            CloudyFox Technologies — Data Science Intern
             <span class="subtle">(Aug 2021 – Oct 2021)</span>
           </summary>
           <div class="exp-body">
@@ -566,7 +524,7 @@
 
         <details>
           <summary>
-            Kazi Studios, Nepal — Laravel Developer
+            Kazi Studios Pvt Ltd — Laravel Developer
             <span class="subtle">(Mar 2021 – May 2021)</span>
           </summary>
           <div class="exp-body">
@@ -633,6 +591,27 @@
       <section id="projects" aria-labelledby="projects-title">
         <h2 id="projects-title" class="gradient-text">Projects</h2>
         <div class="grid cols-3">
+          <div class="card project">
+  <h3>Sydney Cost of Living (CPI) Analysis</h3>
+
+  <ul class="project-points">
+    <li><strong>Problem:</strong> Understand inflation trends and cost-of-living pressures across Sydney using CPI data.</li>
+    <li><strong>Approach:</strong> Analysed CPI datasets by category and time, separating latest snapshot KPIs from exploratory analysis.</li>
+    <li><strong>Outcome:</strong> Built an interactive Power BI dashboard with drill-through, rankings, and tooltips to support category-level investigation.</li>
+  </ul>
+
+  <div class="project-meta">
+    <span>Power BI</span>
+    <span>Time Series</span>
+    <span>Business Analytics</span>
+  </div>
+
+  <div class="actions">
+    <a class="btn" href="<!-- ADD DEMO LINK -->" target="_blank" rel="noopener">Demo</a>
+    <a class="btn btn-ghost" href="<!-- ADD GITHUB LINK -->" target="_blank" rel="noopener">GitHub</a>
+  </div>
+</div>
+
           <!-- <div class="card project">
             <h3>Recycling Trends Dashboard</h3>
 
