Added project link

--- a/index.html
+++ b/index.html
@@ -607,8 +607,7 @@
   </div>
 
   <div class="actions">
-    <a class="btn" href="<!-- ADD DEMO LINK -->" target="_blank" rel="noopener">Demo</a>
-    <a class="btn btn-ghost" href="<!-- ADD GITHUB LINK -->" target="_blank" rel="noopener">GitHub</a>
+    <a class="btn btn-ghost" href="https://github.com/AamodPaud3l/sydney-cpi-dashboard" target="_blank" rel="noopener">GitHub</a>
   </div>
 </div>
 
